--- a/client_code/Admin/form_template.yaml
+++ b/client_code/Admin/form_template.yaml
@@ -16,3 +16,9 @@ components:
   properties: {}
   name: navbar_links
   layout_properties: {slot: nav-right}
+  components:
+  - type: Button
+    properties: {role: secondary-color, bold: false, align: center, spacing_above: small, background: '', icon: '', underline: false, font: '', icon_align: left, foreground: '', spacing_below: small, visible: true, border: '', italic: false, enabled: true, font_size: null, tooltip: '', text: logout}
+    name: button_1
+    layout_properties: {}
+    event_bindings: {click: button_1_click}
