--- a/client_code/Admin/ManageUsers/ManageAdmin/editadmin/ItemTemplate7/form_template.yaml
+++ b/client_code/Admin/ManageUsers/ManageAdmin/editadmin/ItemTemplate7/form_template.yaml
@@ -4,12 +4,6 @@ container:
 components:
 - type: TextBox
   properties: {}
-  name: text_box_1
-  layout_properties: {grid_position: 'HPODRR,PICAUY'}
-  data_bindings:
-  - {property: text, code: 'self.item[''full_name'']', writeback: true}
-- type: TextBox
-  properties: {}
   name: text_box_2
   layout_properties: {grid_position: 'HPODRR,ABILDO'}
   data_bindings:
@@ -28,4 +22,10 @@ components:
   properties: {role: primary-color, bold: false, align: center, spacing_above: small, background: '', icon: '', underline: false, font: '', icon_align: left, foreground: '', spacing_below: small, visible: true, border: '', italic: false, enabled: true, font_size: null, tooltip: '', text: delete}
   name: button_2
   layout_properties: {grid_position: 'HPODRR,RDAZSZ'}
+- type: TextBox
+  properties: {}
+  name: text_box_1
+  layout_properties: {grid_position: 'TMOVWP,RLHDXM'}
+  data_bindings:
+  - {property: text, code: 'self.item[''full_name'']', writeback: true}
 is_package: true
