Created Admin.ManageUsers.ManageAdmin.editadmin.ItemTemplate4; Edited Admin.ManageUsers.ManageAdmin.editadmin.ItemTemplate7 and Admin.ManageUsers.ManageAdmin.editadmin

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -3,6 +3,7 @@ unique_ids:
     Admin.ManageUsers.ManageEmployee.editemployee: '1720155198606788795906638.4767'
     Login: '172015335491557237405236.147064'
     Admin.ManageUsers.ManageAdmin.addadmin.ItemTemplate1: '1720174116231658363051028.3478'
+    Admin.ManageUsers.ManageAdmin.editadmin.ItemTemplate4: '172063655283224343425477.657333'
     Admin.ManageUsers.ManageAdmin: '1720154163452637475583634.4679'
     Admin.ManageUsers.ManageEmployee.editemployee.ItemTemplate1: 7W3EYIYCRKTM7UUY6BWHZ25PTNANAXMW
     Admin.ManageUsers.ManageAdmin.editadmin.ItemTemplate7: '1720175730664165059959471.0562'
