--- a/client_code/Admin/ManageUsers/ManageAdmin/editadmin/ItemTemplate7/form_template.yaml
+++ b/client_code/Admin/ManageUsers/ManageAdmin/editadmin/ItemTemplate7/form_template.yaml
@@ -1,31 +1,5 @@
 container:
   type: ColumnPanel
   properties: {col_widths: '{}'}
-components:
-- type: TextBox
-  properties: {}
-  name: text_box_2
-  layout_properties: {grid_position: 'HPODRR,ABILDO'}
-  data_bindings:
-  - {property: text, code: 'self.item[''email_user'']', writeback: true}
-- type: TextBox
-  properties: {}
-  name: text_box_3
-  layout_properties: {grid_position: 'HPODRR,LVBGSB'}
-  data_bindings:
-  - {property: text, code: 'self.item[''user_phonenumber'']', writeback: true}
-- type: Button
-  properties: {role: primary-color, bold: false, align: center, spacing_above: small, background: '', icon: '', underline: false, font: '', icon_align: left, foreground: '', spacing_below: small, visible: true, border: '', italic: false, enabled: true, font_size: null, tooltip: '', text: save}
-  name: button_1
-  layout_properties: {grid_position: 'HPODRR,AZXGLO'}
-- type: Button
-  properties: {role: primary-color, bold: false, align: center, spacing_above: small, background: '', icon: '', underline: false, font: '', icon_align: left, foreground: '', spacing_below: small, visible: true, border: '', italic: false, enabled: true, font_size: null, tooltip: '', text: delete}
-  name: button_2
-  layout_properties: {grid_position: 'HPODRR,RDAZSZ'}
-- type: TextBox
-  properties: {}
-  name: text_box_1
-  layout_properties: {grid_position: 'TMOVWP,RLHDXM'}
-  data_bindings:
-  - {property: text, code: 'self.item[''full_name'']', writeback: true}
+components: []
 is_package: true
